[package]
name = "rusxr_macros"
version = "0.1.0"
authors = ["gkhk <gkhk.zu@gmail.com>"]
edition = "2021"
description = "The macros needed for `rsx`"
readme = "../README.md"
repository = ""
keywords = ["macro"]
categories = []
license = "MIT"
license-file = "../LICENSE.txt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.67"
quote = "1.0.33"
syn = "2.0.37"
